--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,3 +59,104 @@ body {
 .content {
   background-color: #D8D5D2;
 }
+
+
+.top-wrapper {
+  padding: 180px 0 100px 0;
+  background-image: url(https://cdn.pixabay.com/photo/2015/10/31/14/35/dark-1015828_960_720.jpg);
+  background-size: cover;
+  color:#D8D5D2;
+  text-align: center;
+
+}
+
+.container {
+  width: 1170px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.top-wrapper h1 {
+   font-size: 45px;
+  letter-spacing: 5px;
+  margin-bottom: 10px;
+}
+
+.top-wrapper p {
+    margin-bottom: 5px;
+}
+
+.btn-wrapper p {
+  margin: 10px 0;
+}
+
+.Signup {
+  background-color: #7C8981;
+  margin-right: 10px;
+}
+
+.Login {
+  background-color: #7C8981;
+}
+
+.btn {
+  padding: 12px 24px;
+  color:#D8D5D2;
+  display: inline-block;
+  border-radius: 4px;
+}
+
+.btn:hover {
+  opacity: 1;
+}
+
+.content-wrapper {
+  height: 500px;
+  padding-bottom: 80px;
+  background-color:#7C8981;
+  text-align: center;
+}
+
+.heading {
+  padding-top: 60px;
+  padding-bottom: 30px;
+  color: #D8D5D2;
+}
+
+.content {
+  float: left;
+  width: 25%;
+  color: #D8D5D2;
+}
+
+.content-icon {
+  position: relative;
+}
+
+.foto{
+  width:150px;
+  height:200px;
+}
+
+
+.message-wrapper {
+  border-bottom: 1px solid #424F5C;
+  margin-top: 20px;
+  color:#424F5C;
+  padding-bottom: 80px;
+  text-align: center;
+  background-color: #D8D5D2;
+}
+
+.message {
+  padding: 15px 40px;
+  background-color: #424F5C;
+  cursor: pointer;
+  box-shadow: 0 7px #8C9CAA;
+}
+
+.message:active {
+  position: relative;
+  top: 7px;
+  box-shadow: none;
+}
